--- a/styles.css
+++ b/styles.css
@@ -183,12 +183,11 @@ h1, h2 {
 .rooms-row {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 30px;
 }
 
 .room-info {
     padding-left: 30px;
-    width: 50%;
+    width: 43%;
     font-size: 1.8rem;
 }
 
@@ -213,10 +212,6 @@ h1, h2 {
     margin-right: 12px;
 }
 
-.carousel-inner .carousel-item {
-    width: 98%;
-}
-
 .room-img {
     border-radius: 15px;
     background-position: 0;
@@ -224,9 +219,9 @@ h1, h2 {
 }
 
 .room-img-50 {
-    width: 48%;
+    width: 55%;
     max-width: 645px;
-    min-height: 380px;
+    min-height: 390px;
     margin-bottom: 50px;
 }
 
@@ -242,6 +237,7 @@ h1, h2 {
 }
 
 .carousel-controllers {
+    margin-top: 30px;
     display: flex;
     justify-content: center;
 }
@@ -510,8 +506,8 @@ h1, h2 {
 
 @media (max-width: 1024px) {
     .wrapper {
-       padding-left: 50px;
-        padding-right: 50px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 
     #about .wrapper {
@@ -544,12 +540,13 @@ h1, h2 {
     .footer {
         padding-top: 200px;
     }
+
 }
 
 @media (max-width: 850px) {
     .wrapper {
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 
