--- a/styles.css
+++ b/styles.css
@@ -380,8 +380,9 @@ h1, h2 {
 }
 
 #comments {
-    padding-bottom: 170px;
-    background: url("./img/reviews_bg.png") 50% 0 no-repeat;
+    padding-bottom: 0;
+    background: url(./img/reviews_bg.png) 50% no-repeat;
+    background-size: cover;
 }
 
 .container-1094 {
@@ -532,24 +533,29 @@ h1, h2 {
 }
 
 .footer {
-    padding: 260px 0 30px;
+    padding: 220px 0 30px;
     background: #262B39;
     text-align: center;
 }
 
 .map-container {
-    padding-top: 260px;
+    padding-top: 220px;
     position: relative;
 }
 
-.map-container .map-img {
+.map-container .map-link {
     position: absolute;
-    top: 50%;
+    top: 25%;
+    width: 100%;
+}
+
+.map-container .map-link .map-image {
+    width: 100%;
 }
 
 .scrollup {
-    width: 50px;
-    height: 60px;
+    width: 60px;
+    height: 70px;
     opacity: 0.6;
     position: fixed;
     bottom: 20px;
@@ -599,6 +605,10 @@ h1, h2 {
         padding-right: 30px;
     }
 
+    .home-containers {
+        width: 60%;
+    }
+
     #about .wrapper {
         padding-bottom: 0;
     }
@@ -627,7 +637,7 @@ h1, h2 {
     }
 
     .footer {
-        padding-top: 200px;
+        padding-top: 160px;
     }
 
     .scrollup {
@@ -637,9 +647,69 @@ h1, h2 {
 }
 
 @media (max-width: 850px) {
+    html {
+        font-size: 9px;
+    }
+
+    .home-containers {
+        width: 65%;
+    }
+
     .wrapper {
         padding-left: 20px;
         padding-right: 20px;
+    }
+
+    .comments-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .comments-container .comments-card {
+        margin-bottom: 15px;
+        width: 70%;
+    }
+
+    .map-container .map-link {
+        top: 35%;
+    }
+
+    .footer {
+        padding-top: 130px;
+    }
+}
+
+@media (max-width: 700px) {
+    .home-containers {
+        width: 70%;
+    }
+
+    .title-container #title {
+        font-size: 4rem;
+    }
+
+    .title-container .description {
+        font-size: 2.4rem;
+    }
+
+    .phone-container .description {
+        font-size: 2rem;
+    }
+
+    .phone-container .phone-number {
+        font-size: 2.8rem;
+    }
+
+    .map-container {
+        padding-top: 100px;
+    }
+
+    .map-container .map-link {
+        top: 50%;
+    }
+
+    .footer {
+        padding-top: 95px;
     }
 }
 
@@ -647,5 +717,41 @@ h1, h2 {
     .wrapper {
         padding-left: 15px;
         padding-right: 15px;
+    }
+
+    .contacts-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contacts-container .contacts-card {
+        margin-bottom: 15px;
+        width: 65%;
+    }
+    .contacts-card .contacts-icon {
+        margin-bottom: 15px;
+        max-height: 65px;
+    }
+
+    .map-container {
+        padding-top: 30px;
+    }
+
+    .map-container .map-link {
+        top: 95%;
+    }
+}
+
+@media (max-width: 400px) {
+    .map-container {
+        padding-top: 5px;
+    }
+
+    .map-container .map-link {
+        top: 100%;
+    }
+
+    .footer {
+        padding-top: 60px;
     }
 }
