--- a/styles.css
+++ b/styles.css
@@ -581,6 +581,7 @@ h1, h2 {
   position: absolute;
   top: 25%;
   width: 100%;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .map-container .map-link .map-image {
